[package]
name = "t3-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-util-uri = { path = "../../mobilecoin/util/uri" }

futures = "0.3"
grpcio = "0.12"
protobuf = "2.28.0"

[build-dependencies]
mc-util-build-grpc = { path = "../../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../../mobilecoin/util/build/script" }

cargo-emit = "0.2.1"
