[package]
name = "t3-api"
version = "2.10.9"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"
grpcio = { version = "0.13", default-features = false, features = ["prost-codec"] }
mc-api = { path = "../../mobilecoin/api" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }
prost = "0.14"

[build-dependencies]

cargo-emit = "0.2.1"
mc-util-build-grpc = { path = "../../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../../mobilecoin/util/build/script" }
