[package]
name = "t3-connection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc-common = { path = "../../mobilecoin/common", features = ["log"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }

t3-api = { path = "../api" }

displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.12"
protobuf = "2.28.0"
