[package]
name = "t3-connection"
version = "2.10.9"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = { version = "0.13", default-features = false, features = ["prost-codec"] }
mc-common = { path = "../../mobilecoin/common", features = ["log"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }
prost = "0.14"

t3-api = { path = "../api" }
