[package]
name = "mc-validator-api"
version = "2.10.2"
authors = ["MobileCoin"]
build = "build.rs"
edition = "2018"
links = "mc-validator-api"

[dependencies]
mc-api = { path = "../../mobilecoin/api" }
mc-consensus-api = { path = "../../mobilecoin/consensus/api" }
mc-fog-report-api = { path = "../../mobilecoin/fog/report/api" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }

futures = "0.3"
grpcio = "0.13"
protobuf = "2.28.0"

[build-dependencies]
mc-util-build-grpc = { path = "../../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../../mobilecoin/util/build/script" }

cargo-emit = "0.2.1"
