[package]
name = "mc-validator-connection"
version = "2.1.1"
authors = ["MobileCoin"]
edition = "2018"

[dependencies]
mc-validator-api = { path = "../api" }

mc-api = { path = "../../mobilecoin/api" }
mc-blockchain-types = { path = "../../mobilecoin/blockchain/types" }
mc-common = { path = "../../mobilecoin/common", features = ["log"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-fog-report-types = { path = "../../mobilecoin/fog/report/types" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }

displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.11.0"
protobuf = "2.28.0"
