[package]
name = "mc-validator-connection"
version = "2.10.7"
authors = ["MobileCoin"]
edition = "2018"

[dependencies]
mc-api = { path = "../../mobilecoin/api" }
mc-blockchain-types = { path = "../../mobilecoin/blockchain/types" }
mc-common = { path = "../../mobilecoin/common", features = ["log"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-fog-report-types = { path = "../../mobilecoin/fog/report/types" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }
mc-validator-api = { path = "../api" }

displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = { version = "0.13", default-features = false, features = ["prost-codec"] }
prost = "0.11"
