[package]
name = "mc-validator-service"
version = "2.8.0"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "validator-service"
path = "src/bin/main.rs"

[dependencies]
mc-attest-verifier = { path = "../../mobilecoin/attest/verifier" }
mc-common = { path = "../../mobilecoin/common", default-features = false, features = ["loggers"] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-consensus-enclave-measurement = { path = "../../mobilecoin/consensus/enclave/measurement" }
mc-fog-report-connection = { path = "../../mobilecoin/fog/report/connection" }
mc-full-service = { path = "../../full-service" }
mc-ledger-db = { path = "../../mobilecoin/ledger/db" }
mc-ledger-sync = { path = "../../mobilecoin/ledger/sync" }
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-parse = { path = "../../mobilecoin/util/parse" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }
mc-validator-api = { path = "../api" }

clap = { version = "4.3", features = ["derive", "env"] }
grpcio = "0.12"
rayon = "1.7"
