[package]
name = "mc-validator-service"
version = "2.10.7"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[[bin]]
name = "validator-service"
path = "src/bin/main.rs"

[dependencies]
mc-attest-core = { path = "../../mobilecoin/attest/core", default-features = false }
mc-attest-verifier = { path = "../../mobilecoin/attest/verifier" }
mc-attestation-verifier = "0.4.1"
mc-common = { path = "../../mobilecoin/common", default-features = false, features = [
    "loggers",
] }
mc-connection = { path = "../../mobilecoin/connection" }
mc-consensus-enclave-measurement = { path = "../../mobilecoin/consensus/enclave/measurement" }
mc-fog-report-connection = { path = "../../mobilecoin/fog/report/connection" }
mc-full-service = { path = "../../full-service" }
mc-ledger-db = { path = "../../mobilecoin/ledger/db" }
mc-ledger-sync = { path = "../../mobilecoin/ledger/sync" }
mc-sgx-core-types = "0.12.0"
mc-transaction-core = { path = "../../mobilecoin/transaction/core" }
mc-util-grpc = { path = "../../mobilecoin/util/grpc" }
mc-util-parse = { path = "../../mobilecoin/util/parse" }
mc-util-uri = { path = "../../mobilecoin/util/uri" }
mc-validator-api = { path = "../api" }

clap = { version = "4.4", features = ["derive", "env"] }
grpcio = "0.13"
rayon = "1.7"
