[tool.poetry]
name = "fs-integration"
version = "0.1.0"
description = ""
authors = ["MobileCoin Inc."]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.3"
rich = "^12.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
