[package]
name = "validator-ledger-service"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "validator_server"
path = "src/lib.rs"

[[bin]]
name = "validator_main"
path = "src/bin/main.rs"

[dependencies]
mc-full-service = { path = "../full-service"}

mc-common = { path = "../mobilecoin/common", default-features = false, features = ["loggers"] }
mc-consensus-api = { path = "../mobilecoin/consensus/api" }
mc-ledger-db = { path = "../mobilecoin/ledger/db" }
mc-ledger-sync = { path = "../mobilecoin/ledger/sync" }
mc-transaction-core = { path = "../mobilecoin/transaction/core" }
mc-util-grpc = { path = "../mobilecoin/util/grpc" }
mc-util-metrics = { path = "../mobilecoin/util/metrics" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

chrono = { version = "0.4", default-features = false, features = ["alloc"] }
dotenv = "0.15.0"
futures = "0.3"
grpcio = "0.9.0"
protobuf = "2.22.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"

[dev-dependencies]
mc-transaction-core-test-utils = { path = "../mobilecoin/transaction/core/test-utils" }

tempdir = "0.3"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }

[build-dependencies]
# clippy fails to run without this.
diesel = { version = "1.4.6", features = ["sqlite-bundled"] }
